--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,11 @@
   "description": "A Test Driven Generative Development tool to make the code parting from tests",
   "type": "project",
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^8.0",
     "guzzlehttp/guzzle": "^7.3",
     "symfony/dotenv": "^5.3",
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "ext-curl": "*"
   },
   "require-dev": {
     "phpstan/phpstan": "^0.12.99",
