--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src/"
+      "Domain\\": "src/Domain/",
+      "Application\\": "src/Application/",
+      "Infrastructure\\": "src/Infrastructure/"
     }
   },
   "autoload-dev": {
